# nextgen-telegram

./: pyproject.toml
ai/nlp/: intent_recognition.py  smart_replies.py
clients/: async_client.py  hyper_client.py
core/crypto/: aes.py
core/network/: connection.py  protocol_router.py
core/network/mtproto/transport/: tcp.py
core/session/: session_manager.py
docs/: advanced_usage.md
examples/: ai_bot.py  enterprise_bot.py
extensions/blockchain/: audit_log.py
extensions/media/: enhancement.py  processing.py
extensions/security/: anomaly_detection.py
tests/unit/: test_session_manager.py
utils/performance/: optimizers.py
