[project]
name = "nextgen-telegram"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "cryptography>=38.0.0",
    "numpy>=1.22.0",
    "onnxruntime>=1.12.0",
    "web3>=6.0.0",
    "Pillow>=9.3.0",
    "opencv-python>=4.6.0"
]

[project.optional-dependencies]
ai = [
    "transformers>=4.25.0",
    "torch>=1.13.0"
]
quantum = [
    "qiskit>=0.39.0"
]
enterprise = [
    "sqlalchemy>=2.0.0",
    "psycopg2>=2.9.0"
]
